fix: gap issue

--- a/src/components/Textbook/WordDetail/wordDetail.module.scss
+++ b/src/components/Textbook/WordDetail/wordDetail.module.scss
@@ -6,7 +6,6 @@
     display: flex;
     border-radius: 14px;
     background-color: $white;
-    margin-bottom: 40px;
     width: 926px;
     box-shadow: 0px 22.898128509521484px 45.79625701904297px -11.449064254760742px rgba(52, 41, 39, 0.08);
     .leftImage {
